feat: перенести Архивариуса и Наблюдателя
